--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,16 @@ body {
     height: 100vh;
 }
 
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+button {
+    padding: 8px;
+}
+
 .container {
     width: 600px;
     height: 600px;
